--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "knex:seed": "yarn workspace server knex:seed",
     "server-dev": "yarn workspace server dev",
     "web-dev": "yarn workspace web start",
-    "start": "run-p server-dev web-dev"
+    "start": "run-p server-dev web-dev",
+    "mobile-dev": "yarn workspace mobile start"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
